syntax = "proto3";
package mun.claim.v1beta1;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";
import "claim/v1beta1/claim_record.proto";

// this line is used by starport scaffolding # proto/tx/import

option go_package = "mun/x/claim/types";

// Msg defines the Msg service.
service Msg {
  // rpc InitialClaim(MsgInitialClaim) returns (MsgInitialClaimResponse);
  rpc ClaimFor(MsgClaimFor) returns (MsgClaimForResponse);
  rpc UpdateMerkleRoot(MsgUpdateMerkleRoot) returns (MsgUpdateMerkleRootResponse);
  // this line is used by starport scaffolding # proto/tx/rpc
}

message MsgClaimFor {
  string sender = 1;
  Action action = 2;
  string proof = 3;
}

message MsgClaimForResponse {
  string address = 1;
  // total initial claimable amount for the user
  repeated cosmos.base.v1beta1.Coin claimed_amount = 2 [
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins",
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"claimed_amount\""
  ];
}

message MsgUpdateMerkleRoot {
  string sender = 1;
  string root_value = 2;
}

message MsgUpdateMerkleRootResponse {}